# swagger-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/swagger_mcp/: ui_server.py
src/swagger_mcp/templates/: index.html
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/fixtures/: countries.yaml  pokeapi.yaml
